<resources>
    <string name="app_name">Café</string>
    <string name="welcome">Bienvenidos</string>
    <string name="nombre">Tutor Cafe</string>
    <string name="sesion1">1. Sesion 1 ................... 10:00</string>
    <string name="sesion2">2. Sesion 2 ................... 16:00</string>
    <string name="sesion3">3. Sesion 3 ................... 19:00</string>
    <string name="cesion1">1. Sesion 1 .</string>
    <string name="cesion2">2. Sesion 2 .</string>
    <string name="cesion3">3. Sesion 3 .</string>
    <string name="hora1">10:00</string>
    <string name="hora2">16:00</string>
    <string name="hora3">19:00</string>
</resources>
