<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cafe"
    tools:context="nextu.dvillamar.tutorcaferlayout.MainActivity">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/cafe_tutor"
        android:scaleType="centerCrop"
    />

    <TextView
        android:id="@+id/coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40dp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/nombreComercial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceInverse"
        android:textColor="@android:color/white"
        android:layout_alignBottom="@id/imagen"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/sesion1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/sesion1"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:layout_below="@+id/nombreComercial"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        />

    <TextView
        android:id="@+id/sesion2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/sesion2"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:layout_below="@+id/sesion1"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        />

    <TextView
        android:id="@+id/sesion3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/sesion3"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:layout_below="@+id/sesion2"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        />

</RelativeLayout>
